@@ -418,12 +418,13 @@ intelligible to all the intended readership (e.g.@: for a @acronym{CRAN}
 package to all @acronym{CRAN} users).
 
 @c DESCRIPTION field Title
-The mandatory @samp{Title} field should give a short description of the
-package.  Some package listings may truncate the title to 65 characters.
-It should use @emph{title case} (that is, use capitals for the principal
-words), not use any markup, not have any continuation lines, and not end
-in a period (unless part of @dots{}).  Do not repeat the package name:
-it is often used prefixed by the name.
+The mandatory @samp{Title} field should give a @emph{short} description
+of the package.  Some package listings may truncate the title to 65
+characters.  It should use @emph{title case} (that is, use capitals for
+the principal words: @code{tools::toTitleCase} can help you with this),
+not use any markup, not have any continuation lines, and not end in a
+period (unless part of @dots{}).  Do not repeat the package name: it is
+often used prefixed by the name.
 
 @c DESCRIPTION field Author
 @c DESCRIPTION field Authors@R
