@@ -15,15 +15,15 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "find_gs_cmd", "getBibstyle", "getDepList", "getVignetteInfo",
        "installFoundDepends", "latexToUtf8", "list_files_with_exts",
        "list_files_with_type", "loadRdMacros", "loadPkgRdMacros",
-       "make_translations_pkg", "md5sum",
-       "package.dependencies", "package_dependencies", "parseLatex",
-       "parse_Rd", "pkgDepends", "pkgVignettes", "pskill", "psnice",
-       "read.00Index", "readNEWS", "resaveRdaFiles", "showNonASCII",
-       "showNonASCIIfile", "startDynamicHelp", "testInstalledBasic",
+       "make_translations_pkg", "md5sum", "package.dependencies",
+       "package_dependencies", "parseLatex", "parse_Rd", "pkgDepends",
+       "pkgVignettes", "pskill", "psnice", "read.00Index", "readNEWS",
+       "resaveRdaFiles", "showNonASCII", "showNonASCIIfile",
+       "startDynamicHelp", "testInstalledBasic",
        "testInstalledPackage", "testInstalledPackages", "texi2dvi",
-       "texi2pdf", "toHTML", "toRd", "undoc", "update_pkg_po",
-       "vignetteDepends", "vignetteEngine", "write_PACKAGES",
-       "xgettext", "xgettext2pot", "xngettext")
+       "texi2pdf", "toHTML", "toRd", "toTitleCase", "undoc",
+       "update_pkg_po", "vignetteDepends", "vignetteEngine",
+       "write_PACKAGES", "xgettext", "xgettext2pot", "xngettext")
 
 export("check_packages_in_dir",
        "summarize_check_packages_in_dir_depends",
