@@ -3735,7 +3735,7 @@ setRlibs <-
                 printLog0(Log, paste(c(out, ""), collapse = "\n"))
 		maybe_exit(1L)
             } else if(length(res$bad_version) ||
-                      identical(res$foss_with_BuildVigettes, TRUE) ||
+                      identical(res$foss_with_BuildVignettes, TRUE) ||
                       res$empty_Maintainer_name ||
                       res$Maintainer_needs_quotes)
                 warningLog(Log)
